Fixed User name vertical align

--- a/src/Users/UsersList.module.css
+++ b/src/Users/UsersList.module.css
@@ -17,4 +17,5 @@
   display: flex;
   justify-content: space-between;
   font-weight: bold;
+  align-items: center;
 }
